--- a/schedule.html
+++ b/schedule.html
@@ -539,8 +539,9 @@ a review</a></p>
 <div id="week-13." class="section level3">
 <h3>Week 13.</h3>
 <p>4/17/2022<br />
-<strong>Lecture:</strong> Measurement Error, Missing Data, and Bayesian
-Meta-Analysis<br />
+<strong>Lecture:</strong> <a
+href="lectures/missing_data_and_metaanalysis.html">Measurement Error,
+Missing Data, and Bayesian Meta-Analysis</a><br />
 <strong>Reading:</strong> McElreath Chapter 15.<br />
 <strong>Homework:</strong> Project Proposals Due</p>
 </div>
