add lab for spatial/missing

--- a/schedule.html
+++ b/schedule.html
@@ -299,7 +299,7 @@ href="https://github.com/biol609/biol609.github.io/tree/master/lectures">this
 link</a> for all of the code.</p>
 <div id="week-1." class="section level3">
 <h3>Week 1.</h3>
-<p>1/23/2022<br />
+<p>1/23/2024<br />
 <strong>Lecture</strong>: <a href="lectures/01_intro.html">Why Advanced
 Data Analysis?</a>, <a
 href="lectures/02_Bayesian_Intro.html">Introduction to Bayes</a><br />
@@ -318,7 +318,7 @@ class="uri">https://etherpad.wikimedia.org/p/609-bayes-2024</a></p>
 </div>
 <div id="week-2." class="section level3">
 <h3>Week 2.</h3>
-<p>1/30/2022<br />
+<p>1/30/2024<br />
 <strong>Lecture:</strong> <a
 href="./lectures/03_posterior_sampling.html">Sampling from your
 Posterior</a><br />
@@ -345,7 +345,7 @@ class="uri">https://etherpad.wikimedia.org/p/609-posteriors-2024</a></p>
 </div>
 <div id="week-3." class="section level3">
 <h3>Week 3.</h3>
-<p>2/6/2022<br />
+<p>2/6/2024<br />
 <strong>Lecture:</strong> <a href="./lectures/linear_models.html">Linear
 Bayesian Models</a><br />
 <strong>Reading:</strong> McElreath Chapter 4<br />
@@ -372,7 +372,7 @@ Models</a></p>
 </div>
 <div id="week-4." class="section level3">
 <h3>Week 4.</h3>
-<p>2/13/2022<br />
+<p>2/20/2024<br />
 <strong>Lecture:</strong> <a
 href="./lectures/multiple_predictors.html">Multiple Predictor
 Variables</a><br />
@@ -392,7 +392,7 @@ class="uri">https://etherpad.wikimedia.org/p/609-multiple_predictors-2024</a></p
 </div>
 <div id="week-5." class="section level3">
 <h3>Week 5.</h3>
-<p>2/20/2022<br />
+<p>2/27/2024<br />
 <strong>Lecture:</strong> <a href="./lectures/mmi.html">Bayesian
 Multimodel Inference</a><br />
 <strong>Reading:</strong> McElreath Chapter 7<br />
@@ -412,7 +412,7 @@ class="uri">https://etherpad.wikimedia.org/p/609-mmi-2024</a></p>
 </div>
 <div id="week-6." class="section level3">
 <h3>Week 6.</h3>
-<p>2/27/2022<br />
+<p>3/5/2024<br />
 <strong>Lecture:</strong> <a
 href="./lectures/mcmc_and_hmc.html">Hamiltonian and Markov Chain
 Monte-Carlo Approaches</a><br />
@@ -432,7 +432,7 @@ class="uri">https://etherpad.wikimedia.org/p/609-hmc-2024</a></p>
 </div>
 <div id="week-8." class="section level3">
 <h3>Week 8.</h3>
-<p>3/13/2022<br />
+<p>3/19/2024<br />
 <strong>Lecture</strong>: <a href="lectures/maxent_glm.html">MaxEnt and
 Bayesian GLMs</a><br />
 <strong>Lab:</strong> <a href="lectures/11_bayesian_glm_lab.html">GLM
@@ -451,7 +451,7 @@ class="uri">https://etherpad.wikimedia.org/p/609-glm-2024</a></p>
 </div>
 <div id="week-9." class="section level3">
 <h3>Week 9.</h3>
-<p>3/20/2022<br />
+<p>3/26/2024<br />
 <strong>Lecture:</strong> <a
 href="./lectures/overdisp.html">Overdispersed Models</a>, <a
 href="./lectures/13_zinfl.html">Zero Inflated Models</a><br />
@@ -468,7 +468,7 @@ class="uri">https://etherpad.wikimedia.org/p/609-zig_zag-2024</a></p>
 </div>
 <div id="week-10." class="section level3">
 <h3>Week 10.</h3>
-<p>3/27/2022<br />
+<p>4/2/2024<br />
 <strong>Lecture:</strong> <a
 href="./lectures/07_random_effects.html">Random Effects</a>, <a
 href="./lectures/22_varying_intercept.html">Varying Intercept Mixed
@@ -502,13 +502,13 @@ converge warnings and solutions</a></p>
 </div>
 <div id="week-11." class="section level3">
 <h3>Week 11.</h3>
-<p>4/3/2022<br />
+<p>4/9/2024<br />
 <strong>Lecture:</strong> Visualizing Complex Bayesian Models<br />
 <strong>Reading:</strong> TBD</p>
 </div>
 <div id="week-12." class="section level3">
 <h3>Week 12.</h3>
-<p>4/10/2022<br />
+<p>4/16/2024<br />
 <strong>Lecture:</strong> <a href="./lectures/autocorr.html">Dealing
 with Autocorrelation with Gaussian Proces Models and GAMs</a><br />
 <strong>Reading:</strong> McElreath Chapter 14.5 On GP and Ch4 on
@@ -538,7 +538,7 @@ a review</a></p>
 </div>
 <div id="week-13." class="section level3">
 <h3>Week 13.</h3>
-<p>4/17/2022<br />
+<p>4/23/2024<br />
 <strong>Lecture:</strong> <a
 href="lectures/missing_data_and_metaanalysis.html">Measurement Error,
 Missing Data, and Bayesian Meta-Analysis</a><br />
@@ -547,13 +547,16 @@ Missing Data, and Bayesian Meta-Analysis</a><br />
 </div>
 <div id="week-14." class="section level3">
 <h3>Week 14.</h3>
-<p>4/24/2022<br />
-<strong>Lecture:</strong> Bayes Outside of Rethinking<br />
+<p>4/30/2024<br />
+<strong>Lecture:</strong> <a
+href="lab/missing_and_spatial_prediction.html">Working with advanced
+models</a>, <a href="lab/missing_and_spatial_prediction.html">Bayes
+Outside of Rethinking</a><br />
 <strong>Reading:</strong> brms, INLA, stan?</p>
 </div>
 <div id="week-15." class="section level3">
 <h3>Week 15.</h3>
-<p>5/1/2022<br />
+<p>5/7/2024<br />
 <strong><strong>Final Work Party Week!</strong></strong><br />
 <strong>Final Presentations:</strong> Friday May 10th<br />
 <strong>Final Papers Due:</strong> May 21st</p>
