update rethinking alternatives with some inla priors

--- a/schedule.html
+++ b/schedule.html
@@ -550,9 +550,8 @@ Missing Data, and Bayesian Meta-Analysis</a><br />
 <p>4/30/2024<br />
 <strong>Lecture:</strong> <a
 href="lab/missing_and_spatial_prediction.html">Working with advanced
-models</a>, <a href="lab/missing_and_spatial_prediction.html">Bayes
-Outside of Rethinking</a><br />
-<strong>Reading:</strong> brms, INLA, stan?</p>
+models</a>, <a href="lab/alt_to_rethinking.html">Bayes Outside of
+Rethinking</a></p>
 </div>
 <div id="week-15." class="section level3">
 <h3>Week 15.</h3>
